--- a/hareshchaudhary/index.html
+++ b/hareshchaudhary/index.html
@@ -296,9 +296,9 @@
                 <p class="p-1">
                     © Copyright 2022, All Rights Reserved
                 </p>
-                <div class="flex">
+                <div class="flex jcsb">
                     <p class="p-2">Privacy Policy</p>
-                    <p class="p-2">Terms & Conditions</p>
+                    <p style="padding-left: 30px;" class="p-2">Terms & Conditions</p>
                 </div>
             </div>
         </div>
